--- a/components/search/search.module.scss
+++ b/components/search/search.module.scss
@@ -16,6 +16,7 @@
 }
 
 .searchwrapper input {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   width: 300px;
   height: 35px;
   font-size: 1.7rem;
