--- a/components/results/results.module.scss
+++ b/components/results/results.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
@@ -6,13 +8,41 @@
 }
 
 .card {
+  img {
+    display: block;
+    width: 100%;
+    border-bottom: 1px solid rgb(206, 69, 27);
+  }
+  font-family: 'Prata', serif;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   align-items: center;
+  // justify-content: flex-start;
   background-color: rgb(3, 13, 54);
-  border: 1px solid rgb(206, 69, 27);
+  border: 2px solid rgb(206, 69, 27);
   border-radius: 3px;
-  height: 20rem;
+  height: 35rem;
+  width: 20rem;
   color: rgb(241, 232, 229);
+  .name {
+    padding-top: 1rem;
+  }
+
+  // .category {
+
+  // }
+
+  .description {
+    padding: 1rem 1rem;
+  }
+}
+
+.btn {
+  border: 2px solid rgb(206, 69, 27);
+  background-color: rgba(206, 69, 27, 0);
+  color: rgb(241, 232, 229);
+  border-radius: 3px;
+  width: 5rem;
+  height: 2rem;
+  cursor: pointer;
 }
