--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,3 +7,11 @@
 li {
   list-style: none;
 }
+
+body {
+  --tigerblood: rgb(206, 69, 27);
+  --bgblue: rgb(3, 16, 26);
+  --navbarblue: rgb(3, 13, 54);
+  --navbarborder: rgb(32, 32, 1);
+  --fontwhite: rgb(241, 232, 229);
+}
