--- a/components/displayrecipecards/displayrecipecards.module.scss
+++ b/components/displayrecipecards/displayrecipecards.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 
 .cards {
   display: grid;
@@ -11,19 +11,19 @@
   img {
     display: block;
     width: 100%;
-    border-bottom: 1px solid rgb(206, 69, 27);
+    border-bottom: 1px solid var(--tigerblood);
   }
-  font-family: 'Prata', serif;
+  // font-family: 'Prata', serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(3, 13, 54);
-  border: 2px solid rgb(206, 69, 27);
+  background-color: whitesmoke;
+  border: 1px solid var(--tigerblood);
   border-radius: 3px;
   height: 40rem;
   width: 25rem;
-  color: rgb(241, 232, 229);
+  color: black;
   .name {
     padding-top: 1rem;
     margin: 0 2rem;
@@ -37,9 +37,9 @@
     padding: 1rem 1rem;
   }
   .btn {
-    border: 2px solid rgb(206, 69, 27);
-    background-color: rgba(206, 69, 27, 0);
-    color: rgb(241, 232, 229);
+    border: none;
+    background-color: var(--linkgreen);
+    color: whitesmoke;
     border-radius: 3px;
     width: 5rem;
     height: 2rem;
@@ -51,5 +51,12 @@
 .query_message {
   text-align: center;
   color: rgb(241, 232, 229);
-  font-family: 'Prata', serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 20rem;
+  }
 }
