--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Girassol&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
 .layout {
   display: grid;
@@ -11,7 +12,7 @@
   grid-row: 1/2;
   grid-column: 1/-1;
   background-color: var(--navbarblue);
-  border-bottom: 1px solidvar(--navbarborder);
+  border-bottom: 1px solid var(--navbarborder);
   /* display: flex;
   justify-content: space-between;
   align-items: flex-end; */
@@ -26,8 +27,8 @@
 }
 
 .navbarcontent h1 {
-  font-family: 'Girassol', cursive;
-  color: rgb(206, 69, 27);
+  font-family: 'Dancing Script', cursive;
+  color: rgb(27, 206, 57);
   font-size: 2rem;
   cursor: pointer;
 }
@@ -39,7 +40,6 @@
 .navbarcontent li {
   display: inline;
   margin-right: 1rem;
-  font-family: 'Girassol', cursive;
   color: rgb(206, 69, 27);
   font-size: 1.5rem;
   cursor: pointer;
@@ -51,7 +51,7 @@
 
 @media (max-width: 768px) {
   .layout {
-    grid-template-rows: 50px minmax(700px, auto) 75px;
+    grid-template-rows: 40px minmax(700px, auto) 75px;
   }
 
   .navbarcontent h1 {
@@ -67,8 +67,8 @@
   }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media (max-width: 1024px) {
   .layout {
-    grid-template-rows: 50px minmax(1000px, auto) 75px;
+    grid-template-rows: 40px minmax(1000px, auto) 75px;
   }
 }
