--- a/components/results/results.module.scss
+++ b/components/results/results.module.scss
@@ -13,7 +13,8 @@
     width: 100%;
     border-bottom: 1px solid rgb(206, 69, 27);
   }
-  font-family: 'Prata', serif;
+  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+  //   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,4 +53,7 @@
   text-align: center;
   color: rgb(241, 232, 229);
   font-family: 'Prata', serif;
+}
+
+@media (max-width: 768px) {
 }
