--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -10,13 +10,23 @@
   margin-top: 5rem;
   font-family: 'Prata', serif;
   display: flex;
+  align-items: center;
   // flex-direction: column;
   // align-items: center;
   // justify-content: space-between;
   background-color: rgb(3, 13, 54);
   border: 2px solid rgb(206, 69, 27);
   border-radius: 3px;
-  height: 40rem;
-  width: 50rem;
+  width: 30rem;
+  padding: 1rem;
   color: rgb(241, 232, 229);
+  p {
+    line-height: 200%;
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 20rem;
+  }
 }
