--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,9 +9,15 @@ li {
 }
 
 body {
-  --tigerblood: rgb(206, 69, 27);
-  --bgblue: rgb(3, 16, 26);
-  --navbarblue: rgb(3, 13, 54);
+  --tigerblood: black;
+  --tigerbloodII: rgb(206, 69, 27);
+  --linkgreen: #1bce39;
+  --bgblue: whitesmoke;
+  --bgblueII: rgb(3, 16, 26);
+  --navbarblue: whitesmoke;
+  --navbarblueII: rgb(3, 13, 54);
   --navbarborder: rgb(32, 32, 1);
   --fontwhite: rgb(241, 232, 229);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
