--- a/components/displayrecipecards/displayrecipecards.module.scss
+++ b/components/displayrecipecards/displayrecipecards.module.scss
@@ -1,4 +1,5 @@
 // @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
 .cards {
   display: grid;
@@ -11,7 +12,7 @@
   img {
     display: block;
     width: 100%;
-    border-bottom: 1px solid var(--tigerblood);
+    // border-bottom: 1px solid var(--tigerblood);
   }
   // font-family: 'Prata', serif;
   display: flex;
@@ -19,7 +20,8 @@
   align-items: center;
   justify-content: space-between;
   background-color: whitesmoke;
-  border: 1px solid var(--tigerblood);
+  // border: 1px solid var(--tigerblood);
+  box-shadow: var(--box-shadow);
   border-radius: 3px;
   height: 40rem;
   width: 25rem;
@@ -27,6 +29,7 @@
   .name {
     padding-top: 1rem;
     margin: 0 2rem;
+    font-family: 'Dancing Script', cursive;
   }
 
   // .category {
@@ -41,10 +44,13 @@
     background-color: var(--linkgreen);
     color: whitesmoke;
     border-radius: 3px;
-    width: 5rem;
+    width: 7rem;
     height: 2rem;
     cursor: pointer;
     margin-bottom: 1rem;
+  }
+  .btn:hover {
+    background-color: rgb(56, 104, 8);
   }
 }
 
@@ -57,6 +63,6 @@
 
 @media (max-width: 768px) {
   .card {
-    width: 20rem;
+    width: 22rem;
   }
 }
