--- a/components/displayrecipecards/displayrecipecards.module.scss
+++ b/components/displayrecipecards/displayrecipecards.module.scss
@@ -21,7 +21,7 @@
   justify-content: space-between;
   background-color: whitesmoke;
   // border: 1px solid var(--tigerblood);
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadowII);
   border-radius: 3px;
   height: 40rem;
   width: 25rem;
