--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,8 @@ li {
 body {
   --box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1),
     0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  --box-shadowII: 0 20px 30px 0 rgba(0, 0, 0, 0.1),
+    0 -1px 4px 0 rgba(0, 0, 0, 0.15);
   --tigerblood: black;
   --tigerbloodII: rgb(206, 69, 27);
   --linkgreen: #1bce39;
