--- a/components/displayrecipecards/displayrecipecards.module.scss
+++ b/components/displayrecipecards/displayrecipecards.module.scss
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: whitesmoke;
+  background-color: var(--bgblue);
   // border: 1px solid var(--tigerblood);
   box-shadow: var(--box-shadowII);
   border-radius: 3px;
