--- a/components/results/results.module.scss
+++ b/components/results/results.module.scss
@@ -25,7 +25,7 @@
   border-radius: 3px;
   height: 40rem;
   width: 25rem;
-  color: rgb(241, 232, 229);
+  color: var(--bgblue);
   .name {
     padding-top: 1rem;
     margin: 0 2rem;
