--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,12 +16,12 @@ body {
   --tigerblood: black;
   --tigerbloodII: rgb(206, 69, 27);
   --linkgreen: #1bce39;
-  --bgblue: whitesmoke;
+  --bgblue: #ffffff;
   --bgblueII: rgb(3, 16, 26);
-  --navbarblue: whitesmoke;
+  --navbarblue: #ffffff;
   --navbarblueII: rgb(3, 13, 54);
   --navbarborder: rgb(32, 32, 1);
-  --fontwhite: rgb(241, 232, 229);
+  --fontwhite: #ffffff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
