--- a/components/displayrecipecards/displayrecipecards.module.scss
+++ b/components/displayrecipecards/displayrecipecards.module.scss
@@ -1,19 +1,19 @@
 // @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   gap: 1.5rem;
   // grid-gap: 1.5rem;
-  place-items: center;
+  // place-items: center;
 }
 
 .card {
   img {
-    display: block;
+    // display: block;
     width: 100%;
-    // border-bottom: 1px solid var(--tigerblood);
   }
   // font-family: 'Prata', serif;
   display: flex;
@@ -21,40 +21,32 @@
   align-items: center;
   justify-content: space-between;
   background-color: var(--bgblue);
-  // border: 1px solid var(--tigerblood);
   box-shadow: var(--box-shadowII);
-
-  // box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-
   border-radius: 3px;
-  height: 40rem;
+
   width: 100%;
   color: black;
   .name {
     padding-top: 1rem;
     margin: 0 2rem;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Secular One', sans-serif;
   }
-
-  // .category {
-
-  // }
 
   .description {
     padding: 1rem 1rem;
   }
   .btn {
     border: none;
-    background-color: var(--linkgreen);
+    background-color: var(--button-color);
     color: whitesmoke;
     border-radius: 3px;
     width: 7rem;
-    height: 2rem;
+    min-height: 2rem;
     cursor: pointer;
     margin-bottom: 1rem;
   }
   .btn:hover {
-    background-color: rgb(56, 104, 8);
+    background-color: var(--button-color-hover);
   }
 }
 
@@ -65,8 +57,8 @@
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media (max-width: 768px) {
-  .cards {
-    margin: 0 1rem;
-  }
-}
+// @media (max-width: 768px) {
+//   .cards {
+//     margin: 0 1rem;
+//   }
+// }
