--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 .cards {
-  display: grid;
-  grid-template-columns: 1fr;
+  // display: grid;
+  // grid-template-columns: 1fr;
   gap: 1.5rem;
   place-items: center;
 }
