--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,21 +8,28 @@ li {
   list-style: none;
 }
 
-body {
+:root {
+  // Box Shadow
   --box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1),
     0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  // --box-shadowII: 0 20px 30px 0 rgba(0, 0, 0, 0.1),
-  //   0 -1px 4px 0 rgba(0, 0, 0, 0.15);
   --box-shadowII: 0 1px 4px rgba(0, 0, 0, 0.2);
-  --tigerblood: black;
-  --tigerbloodII: rgb(206, 69, 27);
+
+  // Colors
   --linkgreen: #1bce39;
+  --fontwhite: #ffffff;
+  --dino-purple: rgb(202, 47, 202);
+  --dino-purple-hover: rgb(94, 33, 94);
+
+  // Setting vars
+  --heading-color: var(--dino-purple);
+  --button-color: var(--dino-purple);
+  --button-color-hover: var(--dino-purple-hover);
+
   --bgblue: #ffffff;
   --bgblueII: rgb(3, 16, 26);
   --navbarblue: #ffffff;
   --navbarblueII: rgb(3, 13, 54);
   --navbarborder: rgb(32, 32, 1);
-  --fontwhite: #ffffff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
