--- a/styles/slug.module.scss
+++ b/styles/slug.module.scss
@@ -22,8 +22,14 @@
     img {
       max-width: 80%;
       margin-top: 1.5rem;
-      border-radius: 1rem;
+      border-radius: 3px;
     }
+  }
+  .ingredientsContainer {
+    // display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .ingredients {
     margin-top: 1rem;
