--- a/components/search/search.module.scss
+++ b/components/search/search.module.scss
@@ -22,7 +22,8 @@
 }
 
 .search input {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border: 1px solid black;
   border-radius: 3px;
   padding: 0.2rem;
